[tool.poetry]
name = "utility"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
lolcat = "^1.4"
reportlab = "^3.6.9"
art = "^5.6"
gTTS = "^2.2.4"
lolcommitmsg = "^0.1.0"
pyfiglet = "^0.8.post1"
pynput = "^1.7.6"
pytube = "^12.1.0"
phonenumbers = "^8.12.48"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
